[gd_scene load_steps=2 format=3 uid="uid://bj82hdxigdrfo"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_55a77"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55a77")

[node name="MainMenuBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.435294, 0.984314, 0.964706, 1)

[node name="Title" type="ColorRect" parent="MainMenuBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
color = Color(0.631373, 0.631373, 0.631373, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenuBackground/Title"]
modulate = Color(0.654902, 0.2, 0.270588, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -42.0
offset_right = 196.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Project JumpRat[/center]"

[node name="MarginContainer" type="MarginContainer" parent="MainMenuBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = 3.0
offset_right = 175.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuBackground/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MainMenuBackground/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="HowToPlay" type="Button" parent="MainMenuBackground/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HOW TO PLAY"

[node name="Exit" type="Button" parent="MainMenuBackground/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="HowToPlayScreen" type="ColorRect" parent="MainMenuBackground"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 0.741176)

[node name="HowToPlayMenu" type="ColorRect" parent="MainMenuBackground/HowToPlayScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -263.0
offset_right = 398.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.509804, 0.509804, 0.509804, 1)

[node name="HowToPlayBack" type="Button" parent="MainMenuBackground/HowToPlayScreen/HowToPlayMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.5
offset_top = -99.0
offset_right = 96.5
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="MainMenuBackground/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenuBackground/MarginContainer/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MainMenuBackground/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MainMenuBackground/HowToPlayScreen/HowToPlayMenu/HowToPlayBack" to="." method="_on_how_to_play_back_pressed"]
